--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UI-39ce3fa8-0318-424d-a593-e234d3eb5bb4;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "EcommerceDB": "Server=.\\SQLEXPRESS;Database=EcommerceDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "EcommerceDB": "Server=.\\SQLEXPRESS;Database=EcommerceDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=UI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
