--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="Stripe.net" Version="49.1.0" />
   </ItemGroup>
 
   <ItemGroup>
